--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 					<p class="cv-p">#1 <br/> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras tempus semper enim, in maximus odio tincidunt in. Phasellus ultrices faucibus dictum.</p>
 				</div>
 				<div class="cv-modal">
-					<p>Nunc vulputate metus ac interdum malesuada. Nunc accumsan venenatis felis, in auctor orci. Quisque viverra magna neque, vel pellentesque sapien accumsan a. Aliquam erat velit, consequat et sem in, auctor interdum odio. Nam finibus tempus sapien vel rutrum. Nam volutpat purus sed nisi placerat rhoncus. Phasellus fermentum diam quis leo placerat rutrum.</p>
+					<p class="cv-p">Nunc vulputate metus ac interdum malesuada. Nunc accumsan venenatis felis, in auctor orci. Quisque viverra magna neque, vel pellentesque sapien accumsan a. Aliquam erat velit, consequat et sem in, auctor interdum odio. Nam finibus tempus sapien vel rutrum. Nam volutpat purus sed nisi placerat rhoncus. Phasellus fermentum diam quis leo placerat rutrum.</p>
 				</div>
 				<button class="cta-cv">
 					<span class="cta-cv-text">Read more</span>
@@ -24,7 +24,7 @@
 					<p class="cv-p">#2 <br/> Proin feugiat enim ex, nec semper purus congue sit amet. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum egestas suscipit nulla, quis bibendum diam tincidunt at.</p>
 				</div>
 				<div class="cv-modal">
-					<p>Cras rutrum vulputate tortor. Integer sed lorem iaculis, blandit elit lobortis, euismod mauris. Maecenas accumsan felis sapien, ac accumsan velit vestibulum ac. Nam lobortis cursus mi, sit amet cursus leo pharetra ac. Donec varius turpis sem. Fusce scelerisque tortor at est fermentum, id hendrerit leo tincidunt.</p>
+					<p class="cv-p">Cras rutrum vulputate tortor. Integer sed lorem iaculis, blandit elit lobortis, euismod mauris. Maecenas accumsan felis sapien, ac accumsan velit vestibulum ac. Nam lobortis cursus mi, sit amet cursus leo pharetra ac. Donec varius turpis sem. Fusce scelerisque tortor at est fermentum, id hendrerit leo tincidunt.</p>
 				</div>
 				<button class="cta-cv">
 					<span class="cta-cv-text">Read more</span>
@@ -35,7 +35,7 @@
 					<p class="cv-p">#3 <br/> In hac habitasse platea dictumst. Integer facilisis, nibh at vestibulum suscipit, quam mauris dictum eros, ut convallis orci dui at leo.</p>
 				</div>
 				<div class="cv-modal">
-					<p>Fusce tincidunt nibh nec faucibus posuere. Etiam quis sapien vulputate, gravida nisi in, accumsan lacus. Integer non purus et leo faucibus luctus vitae id tellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed metus imperdiet, accumsan purus vitae, scelerisque ipsum. Etiam blandit facilisis turpis.</p>
+					<p class="cv-p">Fusce tincidunt nibh nec faucibus posuere. Etiam quis sapien vulputate, gravida nisi in, accumsan lacus. Integer non purus et leo faucibus luctus vitae id tellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sed metus imperdiet, accumsan purus vitae, scelerisque ipsum. Etiam blandit facilisis turpis.</p>
 				</div>
 				<button class="cta-cv">
 					<span class="cta-cv-text">Read more</span>
